docs/0.18.2/_sources/api/gammapy.modeling.models.GaussianSpectralModel.rst.txt
GaussianSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: GaussianSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~GaussianSpectralModel.covariance
      ~GaussianSpectralModel.default_parameters
      ~GaussianSpectralModel.is_norm_spectral_model
      ~GaussianSpectralModel.mean
      ~GaussianSpectralModel.norm
      ~GaussianSpectralModel.parameters
      ~GaussianSpectralModel.sigma
      ~GaussianSpectralModel.tag
      ~GaussianSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~GaussianSpectralModel.__call__
      ~GaussianSpectralModel.copy
      ~GaussianSpectralModel.create
      ~GaussianSpectralModel.energy_flux
      ~GaussianSpectralModel.energy_flux_error
      ~GaussianSpectralModel.evaluate
      ~GaussianSpectralModel.evaluate_error
      ~GaussianSpectralModel.from_dict
      ~GaussianSpectralModel.from_parameters
      ~GaussianSpectralModel.integral
      ~GaussianSpectralModel.integral_error
      ~GaussianSpectralModel.inverse
      ~GaussianSpectralModel.plot
      ~GaussianSpectralModel.plot_error
      ~GaussianSpectralModel.spectral_index
      ~GaussianSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: mean
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: sigma
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
